Compiler1/Parser/llangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from llang.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class llangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, Iden=65, Number=66, 
		String=67, Whitespace=68, Comment=69;
	public const int
		RULE_prog = 0, RULE_toplevel = 1, RULE_export = 2, RULE_libimport = 3, 
		RULE_globalVar = 4, RULE_fundef = 5, RULE_structdef = 6, RULE_enumdef = 7, 
		RULE_defargslist = 8, RULE_defargitem = 9, RULE_structDeclList = 10, RULE_structDecl = 11, 
		RULE_enumDeclList = 12, RULE_enumDeclItem = 13, RULE_block = 14, RULE_stmt = 15, 
		RULE_flowstmt = 16, RULE_whilestmt = 17, RULE_forstmt = 18, RULE_ifstmt = 19, 
		RULE_retstmt = 20, RULE_varDeclStmt = 21, RULE_assignStmt = 22, RULE_deferstmt = 23, 
		RULE_assignop = 24, RULE_funcallStmt = 25, RULE_argslist = 26, RULE_expr = 27, 
		RULE_varlist = 28, RULE_elementlist = 29, RULE_unaryop = 30, RULE_multop = 31, 
		RULE_addop = 32, RULE_shiftop = 33, RULE_compop = 34, RULE_eqop = 35, 
		RULE_bitwiseop = 36, RULE_logicop = 37, RULE_typename = 38;
	public static readonly string[] ruleNames = {
		"prog", "toplevel", "export", "libimport", "globalVar", "fundef", "structdef", 
		"enumdef", "defargslist", "defargitem", "structDeclList", "structDecl", 
		"enumDeclList", "enumDeclItem", "block", "stmt", "flowstmt", "whilestmt", 
		"forstmt", "ifstmt", "retstmt", "varDeclStmt", "assignStmt", "deferstmt", 
		"assignop", "funcallStmt", "argslist", "expr", "varlist", "elementlist", 
		"unaryop", "multop", "addop", "shiftop", "compop", "eqop", "bitwiseop", 
		"logicop", "typename"
	};

	private static readonly string[] _LiteralNames = {
		null, "'export'", "'import'", "'\"'", "';'", "'global'", "'def'", "'('", 
		"')'", "'->'", "'struct'", "'{'", "'}'", "'enum'", "','", "':'", "'='", 
		"'while'", "'for'", "'in'", "'if'", "'else'", "'return'", "':='", "'defer'", 
		"'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", 
		"'|='", "'new'", "'['", "']'", "'.'", "'..'", "'-'", "'!'", "'~'", "'*'", 
		"'/'", "'%'", "'+'", "'>>'", "'<<'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'!='", "'&'", "'|'", "'^'", "'&&'", "'||'", "'void'", "'int'", "'float'", 
		"'bool'", "'string'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "Iden", "Number", "String", "Whitespace", 
		"Comment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "llang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static llangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public llangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public llangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public ToplevelContext[] toplevel() {
			return GetRuleContexts<ToplevelContext>();
		}
		public ToplevelContext toplevel(int i) {
			return GetRuleContext<ToplevelContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 78; toplevel();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__9) | (1L << T__12))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ToplevelContext : ParserRuleContext {
		public LibimportContext libimport() {
			return GetRuleContext<LibimportContext>(0);
		}
		public ExportContext export() {
			return GetRuleContext<ExportContext>(0);
		}
		public GlobalVarContext globalVar() {
			return GetRuleContext<GlobalVarContext>(0);
		}
		public FundefContext fundef() {
			return GetRuleContext<FundefContext>(0);
		}
		public StructdefContext structdef() {
			return GetRuleContext<StructdefContext>(0);
		}
		public EnumdefContext enumdef() {
			return GetRuleContext<EnumdefContext>(0);
		}
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterToplevel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitToplevel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 2, RULE_toplevel);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 83; libimport();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 84; export();
				State = 85; globalVar();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 87; export();
				State = 88; fundef();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 90; export();
				State = 91; structdef();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 93; export();
				State = 94; enumdef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExportContext : ParserRuleContext {
		public ExportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_export; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterExport(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitExport(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExport(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExportContext export() {
		ExportContext _localctx = new ExportContext(Context, State);
		EnterRule(_localctx, 4, RULE_export);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 98; Match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LibimportContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public LibimportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_libimport; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterLibimport(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitLibimport(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLibimport(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LibimportContext libimport() {
		LibimportContext _localctx = new LibimportContext(Context, State);
		EnterRule(_localctx, 6, RULE_libimport);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(T__1);
			State = 102; Match(T__2);
			State = 103; Match(Iden);
			State = 104; Match(T__2);
			State = 105; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVarContext : ParserRuleContext {
		public VarDeclStmtContext varDeclStmt() {
			return GetRuleContext<VarDeclStmtContext>(0);
		}
		public GlobalVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterGlobalVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitGlobalVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVarContext globalVar() {
		GlobalVarContext _localctx = new GlobalVarContext(Context, State);
		EnterRule(_localctx, 8, RULE_globalVar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(T__4);
			State = 108; varDeclStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FundefContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public TypenameContext typename() {
			return GetRuleContext<TypenameContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public DefargslistContext defargslist() {
			return GetRuleContext<DefargslistContext>(0);
		}
		public FundefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fundef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterFundef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitFundef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFundef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FundefContext fundef() {
		FundefContext _localctx = new FundefContext(Context, State);
		EnterRule(_localctx, 10, RULE_fundef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(T__5);
			State = 111; Match(Iden);
			State = 112; Match(T__6);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Iden) {
				{
				State = 113; defargslist();
				}
			}

			State = 116; Match(T__7);
			State = 117; Match(T__8);
			State = 118; typename();
			State = 119; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructdefContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public StructDeclListContext structDeclList() {
			return GetRuleContext<StructDeclListContext>(0);
		}
		public StructdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterStructdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitStructdef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructdefContext structdef() {
		StructdefContext _localctx = new StructdefContext(Context, State);
		EnterRule(_localctx, 12, RULE_structdef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121; Match(T__9);
			State = 122; Match(Iden);
			State = 123; Match(T__10);
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Iden) {
				{
				State = 124; structDeclList();
				}
			}

			State = 127; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumdefContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public EnumDeclListContext enumDeclList() {
			return GetRuleContext<EnumDeclListContext>(0);
		}
		public EnumdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterEnumdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitEnumdef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumdefContext enumdef() {
		EnumdefContext _localctx = new EnumdefContext(Context, State);
		EnterRule(_localctx, 14, RULE_enumdef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; Match(T__12);
			State = 130; Match(Iden);
			State = 131; Match(T__10);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Iden) {
				{
				State = 132; enumDeclList();
				}
			}

			State = 135; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefargslistContext : ParserRuleContext {
		public DefargitemContext[] defargitem() {
			return GetRuleContexts<DefargitemContext>();
		}
		public DefargitemContext defargitem(int i) {
			return GetRuleContext<DefargitemContext>(i);
		}
		public DefargslistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defargslist; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterDefargslist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitDefargslist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefargslist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefargslistContext defargslist() {
		DefargslistContext _localctx = new DefargslistContext(Context, State);
		EnterRule(_localctx, 16, RULE_defargslist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; defargitem();
			State = 142;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__13) {
				{
				{
				State = 138; Match(T__13);
				State = 139; defargitem();
				}
				}
				State = 144;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefargitemContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public TypenameContext typename() {
			return GetRuleContext<TypenameContext>(0);
		}
		public DefargitemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defargitem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterDefargitem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitDefargitem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefargitem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefargitemContext defargitem() {
		DefargitemContext _localctx = new DefargitemContext(Context, State);
		EnterRule(_localctx, 18, RULE_defargitem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; Match(Iden);
			State = 146; Match(T__14);
			State = 147; typename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDeclListContext : ParserRuleContext {
		public StructDeclContext[] structDecl() {
			return GetRuleContexts<StructDeclContext>();
		}
		public StructDeclContext structDecl(int i) {
			return GetRuleContext<StructDeclContext>(i);
		}
		public StructDeclListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDeclList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterStructDeclList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitStructDeclList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructDeclList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructDeclListContext structDeclList() {
		StructDeclListContext _localctx = new StructDeclListContext(Context, State);
		EnterRule(_localctx, 20, RULE_structDeclList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 149; structDecl();
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Iden );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDeclContext : ParserRuleContext {
		public ITerminalNode Iden() { return GetToken(llangParser.Iden, 0); }
		public TypenameContext typename() {
			return GetRuleContext<TypenameContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StructDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterStructDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitStructDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructDeclContext structDecl() {
		StructDeclContext _localctx = new StructDeclContext(Context, State);
		EnterRule(_localctx, 22, RULE_structDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154; Match(Iden);
			State = 155; Match(T__14);
			State = 156; typename();
			State = 159;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__15) {
				{
				State = 157; Match(T__15);
				State = 158; expr(0);
				}
			}

			State = 161; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumDeclListContext : ParserRuleContext {
		public EnumDeclItemContext[] enumDeclItem() {
			return GetRuleContexts<EnumDeclItemContext>();
		}
		public EnumDeclItemContext enumDeclItem(int i) {
			return GetRuleContext<EnumDeclItemContext>(i);
		}
		public EnumDeclListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumDeclList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.EnterEnumDeclList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IllangListener typedListener = listener as IllangListener;
			if (typedListener != null) typedListener.ExitEnumDeclList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IllangVisitor<TResult> typedVisitor = visitor as IllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumDeclList(this);
			else return visitor.VisitChildren(this);
		}
	}
